Add fix the tag repository set rabbit mq docker composer and add integration tests